--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <hr>
   <h2>Tento web je vytvořen jen pro vás :))</h2>
   <h3>Moc věcí tu zatím není, ale bude update pokud chcete.<h3>
-    <a href="http://127.0.0.1:5500/website/Music.html" target=_blank>
+    <a href="https://zenesno1.github.io/for1.BMusic/Music.html" target=_blank>
       <h4>HUDBA</h4>
     </a>
       <div id="container" >
